--- a/aop_sale/views/stock_picking.xml
+++ b/aop_sale/views/stock_picking.xml
@@ -20,10 +20,18 @@
             </xpath>
 
             <xpath expr="//field[@name='origin']" position="after">
-                   <field name="picking_purchase_id"
-                           string="Purchase Order"
-                           attrs="{'invisible': [('picking_purchase_id', '=', False)]}"/>
-                </xpath>
+                <field name="picking_purchase_id"
+                       string="Purchase Order"
+                       attrs="{'invisible': [('picking_purchase_id', '=', False)]}"/>
+            </xpath>
+
+            <xpath expr="//field[@name='origin']" position="after">
+                <field name="src_partner_id" string="源地址"/>
+                <field name="des_partner_id" string="目的地址"/>
+                <field name="picking_purchase_id"
+                       string="采购订单"
+                       attrs="{'invisible': [('picking_purchase_id', '=', False)]}"/>
+            </xpath>
 
         </field>
     </record>
