--- a/aop_sale/views/sale_order_views.xml
+++ b/aop_sale/views/sale_order_views.xml
@@ -11,6 +11,35 @@
                     <attribute name="editable">bottom</attribute>
                 </xpath>
 
+                <!-- 添加1个合同价格确认的state -->
+                <xpath expr="//field[@name='state']" position="attributes">
+                    <attribute name="statusbar_visible">draft,sent,carrier,sale</attribute>
+                </xpath>
+
+                <xpath expr="//button[@name='print_quotation']" position="after">
+                    <button name="action_quotation_confirm" id="action_quotation_confirm" string="Quotation Confirm"
+                            type="object" attrs="{'invisible': [('state', 'not in', ['draft', 'sent'])]}"/>
+                </xpath>
+
+                <xpath expr="//button[@name='action_cancel']" position="attributes">
+                    <attribute name="states">draft,sent,carrier,sale</attribute>
+
+                </xpath>
+
+                <xpath expr="//button[@name='action_confirm'][1]" position="attributes">
+                    <attribute name="attrs">{'invisible': [('state', 'not in', ['carrier'])]}</attribute>
+
+                </xpath>
+
+                <xpath expr="//button[@name='action_confirm'][2]" position="attributes">
+                    <attribute name="attrs">{'invisible': 1}</attribute>
+                </xpath>
+
+                <!--
+                    print和Send By Email按钮也需要调整，这里能看到价格，待原型确定后再补
+                -->
+
+
                 <xpath expr="//button[@name='action_view_delivery']" position="after">
                     <button name="open_vin_picking"
 							string="VIN码调拨单"
@@ -22,6 +51,8 @@
                 <xpath expr="//field[@name='warehouse_id']" position="replace">
 
                 </xpath>
+
+
 
                 <xpath expr="//field[@name='partner_shipping_id']" position="before">
 
@@ -96,25 +127,45 @@
 
                 </xpath>
 
-                <!--# 隐藏价格-->
+                <!--# 隐藏价格, 以后应该通过group权限来隐藏-->
                 <xpath expr="//field[@name='order_line']/tree/field[@name='price_unit']" position="attributes">
-                    <attribute name="invisible">0</attribute>
+                    <!--
+                    <attribute name="invisible">[('state', 'in', ['draft'])]</attribute>
+                    -->
+
+                    <attribute name="attrs">{'invisible': [('state', 'in', ['draft'])], 'readonly': [('qty_invoiced', '&gt;', 0)]}</attribute>
+
                 </xpath>
 
                 <!--# 隐藏税率-->
                 <xpath expr="//field[@name='order_line']/tree/field[@name='tax_id']" position="attributes">
-                    <attribute name="invisible">0</attribute>
+                    <attribute name="attrs">{'invisible': [('state', 'in', ['draft'])], 'readonly': [('qty_invoiced', '&gt;', 0)]}</attribute>
                 </xpath>
 
                 <!--# 隐藏小计-->
                 <xpath expr="//field[@name='order_line']/tree/field[@name='price_subtotal']" position="attributes">
-                    <attribute name="invisible">0</attribute>
+                    <attribute name="attrs">{'invisible': [('state', 'in', ['draft'])]}</attribute>
+                </xpath>
+
+                <!--# 隐藏未税金额-->
+                <xpath expr="//field[@name='amount_untaxed']" position="attributes">
+                    <attribute name="attrs">{'invisible': [('state', 'in', ['draft'])]}</attribute>
+                </xpath>
+
+                <!--# 隐藏税率金额-->
+                <xpath expr="//field[@name='amount_tax']" position="attributes">
+                    <attribute name="attrs">{'invisible': [('state', 'in', ['draft'])]}</attribute>
+                </xpath>
+
+                <!--# 隐藏总计金额-->
+                <xpath expr="//field[@name='amount_total']" position="attributes">
+                    <attribute name="attrs">{'invisible': [('state', 'in', ['draft'])]}</attribute>
                 </xpath>
 
                 <xpath expr="//field[@name='order_line']/tree/field[@name='product_id']" position="after">
-                     <!--<field name="service_product_id" domain="[('type','=','service')]" attrs="{'required': 1}" />-->
+                    <field name="service_product_id" domain="[('type','=','service')]" attrs="{'required': 1}" />
                     <field name="carrier_id"  domain="[('partner_id','=', parent.partner_id)]" />
-                    <!--<field name="carrier_price" />-->
+                    <field name="carrier_price" />
                     <field name="vin"/>
                 </xpath>
 
