--- a/aop_sale/views/sale_order_views.xml
+++ b/aop_sale/views/sale_order_views.xml
@@ -9,6 +9,7 @@
 
                 <xpath expr="//field[@name='order_line']/tree" position="attributes">
                     <attribute name="editable">bottom</attribute>
+
                 </xpath>
 
                 <!-- 添加1个合同价格确认的state -->
@@ -161,6 +162,12 @@
                 <xpath expr="//field[@name='amount_total']" position="attributes">
                     <attribute name="attrs">{'invisible': [('state', 'in', ['draft'])]}</attribute>
                 </xpath>
+
+
+                <xpath expr="//field[@name='order_line']/tree/control//create[1]" position="after">
+                    <create string="Copy a product" context="{'copy_a_product': True}"/>
+                </xpath>
+
 
                 <xpath expr="//field[@name='order_line']/tree/field[@name='product_id']" position="after">
                     <field name="service_product_id" domain="[('type','=','service')]" attrs="{'required': 1}" />
