销售单在销售目录组下新增了2个组,客服和调度,客服看不到所有价格, 调度能看到价格并修改合同

--- a/aop_sale/views/sale_order_views.xml
+++ b/aop_sale/views/sale_order_views.xml
@@ -19,17 +19,12 @@
 
                 <xpath expr="//button[@name='print_quotation']" position="after">
                     <button name="action_quotation_confirm" id="action_quotation_confirm" string="Quotation Confirm"
-                            type="object" attrs="{'invisible': [('state', 'not in', ['draft', 'sent'])]}"/>
-                </xpath>
-
-                <xpath expr="//button[@name='action_cancel']" position="attributes">
-                    <attribute name="states">draft,sent,carrier,sale</attribute>
-
+                            type="object" groups="aop_sale.group_aop_sale_customers" attrs="{'invisible': [('state', 'not in', ['draft', 'sent'])]}"/>
                 </xpath>
 
                 <xpath expr="//button[@name='action_confirm'][1]" position="attributes">
                     <attribute name="attrs">{'invisible': [('state', 'not in', ['carrier'])]}</attribute>
-
+                    <attribute name="groups">aop_sale.group_aop_sale_scheduling</attribute>
                 </xpath>
 
                 <xpath expr="//button[@name='action_confirm'][2]" position="attributes">
@@ -37,9 +32,36 @@
                 </xpath>
 
                 <!--
-                    print和Send By Email按钮也需要调整，这里能看到价格，待原型确定后再补
+                    preview,print和Send By Email按钮也需要调整，这里能看到价格
                 -->
+                <xpath expr="//button[@name='preview_sale_order']" position="attributes">
+                    <attribute name="groups">aop_sale.group_aop_sale_scheduling</attribute>
+                </xpath>
 
+                <xpath expr="//button[@name='print_quotation'][1]" position="attributes">
+                    <attribute name="states">draft,sent,carrier,sale</attribute>
+                    <attribute name="groups">aop_sale.group_aop_sale_scheduling</attribute>
+                </xpath>
+
+                <xpath expr="//button[@name='print_quotation'][2]" position="attributes">
+                    <attribute name="groups">aop_sale.group_aop_sale_scheduling</attribute>
+                </xpath>
+
+                <xpath expr="//button[@name='action_quotation_send'][1]" position="attributes">
+                    <attribute name="states">draft,sent,carrier,sale</attribute>
+                    <attribute name="groups">aop_sale.group_aop_sale_scheduling</attribute>
+                </xpath>
+
+                <xpath expr="//button[@name='action_quotation_send'][2]" position="attributes">
+                    <attribute name="groups">aop_sale.group_aop_sale_scheduling</attribute>
+                </xpath>
+
+                <xpath expr="//button[@name='action_cancel']" position="attributes">
+
+                    <attribute name="states">draft,sent,carrier,sale</attribute>
+
+                    <attribute name="groups">aop_sale.group_aop_sale_scheduling</attribute>
+                </xpath>
 
                 <xpath expr="//button[@name='action_view_delivery']" position="after">
                     <button name="open_vin_picking"
@@ -128,39 +150,39 @@
 
                 </xpath>
 
-                <!--# 隐藏价格, 以后应该通过group权限来隐藏-->
+                <!--# 隐藏价格, 仅对调度可见-->
                 <xpath expr="//field[@name='order_line']/tree/field[@name='price_unit']" position="attributes">
+
+                    <attribute name="groups">aop_sale.group_aop_sale_scheduling</attribute>
+
                     <!--
-                    <attribute name="invisible">[('state', 'in', ['draft'])]</attribute>
-                    -->
-
                     <attribute name="attrs">{'invisible': [('state', 'in', ['draft'])], 'readonly': [('qty_invoiced', '&gt;', 0)]}</attribute>
-
+                    -->
                 </xpath>
 
                 <!--# 隐藏税率-->
                 <xpath expr="//field[@name='order_line']/tree/field[@name='tax_id']" position="attributes">
-                    <attribute name="attrs">{'invisible': [('state', 'in', ['draft'])], 'readonly': [('qty_invoiced', '&gt;', 0)]}</attribute>
+                    <attribute name="groups">aop_sale.group_aop_sale_scheduling</attribute>
                 </xpath>
 
                 <!--# 隐藏小计-->
                 <xpath expr="//field[@name='order_line']/tree/field[@name='price_subtotal']" position="attributes">
-                    <attribute name="attrs">{'invisible': [('state', 'in', ['draft'])]}</attribute>
+                    <attribute name="groups">aop_sale.group_aop_sale_scheduling</attribute>
                 </xpath>
 
                 <!--# 隐藏未税金额-->
                 <xpath expr="//field[@name='amount_untaxed']" position="attributes">
-                    <attribute name="attrs">{'invisible': [('state', 'in', ['draft'])]}</attribute>
+                    <attribute name="groups">aop_sale.group_aop_sale_scheduling</attribute>
                 </xpath>
 
                 <!--# 隐藏税率金额-->
                 <xpath expr="//field[@name='amount_tax']" position="attributes">
-                    <attribute name="attrs">{'invisible': [('state', 'in', ['draft'])]}</attribute>
+                    <attribute name="groups">aop_sale.group_aop_sale_scheduling</attribute>
                 </xpath>
 
                 <!--# 隐藏总计金额-->
                 <xpath expr="//field[@name='amount_total']" position="attributes">
-                    <attribute name="attrs">{'invisible': [('state', 'in', ['draft'])]}</attribute>
+                    <attribute name="groups">aop_sale.group_aop_sale_scheduling</attribute>
                 </xpath>
 
 
