--- a/aop_sale/views/purchase_order_views.xml
+++ b/aop_sale/views/purchase_order_views.xml
@@ -8,10 +8,19 @@
             <field name="model">purchase.order</field>
             <field name="inherit_id" ref="purchase.purchase_order_form"/>
             <field name="arch" type="xml">
+
+                <xpath expr="//field[@name='product_id']" position="attributes">
+                    <attribute name="string">货物</attribute>
+                </xpath>
+
                 <xpath expr="//field[@name='date_order']" position="after">
                     <field name="stock_picking_id"
                            string='调拨单'
                            attrs="{'invisible': [('stock_picking_id', '=', False)]}"/>
+
+                    <field name="stock_picking_batch_id"
+                           string='批量调度单'
+                           attrs="{'invisible': [('stock_picking_batch_id', '=', False)]}"/>
                 </xpath>
             </field>
         </record>
