--- a/aop_sale/views/sale_order_views.xml
+++ b/aop_sale/views/sale_order_views.xml
@@ -181,6 +181,9 @@
                 </xpath>
 
                 <!--# 隐藏总计金额-->
+                <xpath expr="//label[@for='amount_total']" position="attributes">
+                    <attribute name="groups">aop_sale.group_aop_sale_customers</attribute>
+                </xpath>
                 <xpath expr="//field[@name='amount_total']" position="attributes">
                     <attribute name="groups">aop_sale.group_aop_sale_customers</attribute>
                 </xpath>
@@ -198,9 +201,10 @@
                     <field name="vin"/>
                 </xpath>
 
-                <!--<xpath expr="//field[@name='order_line']/tree/field[@name='route_id']" position="after">-->
+                <xpath expr="//field[@name='order_line']/tree/field[@name='route_id']" position="attributes">
                     <!--<field name="route_id"  domain="[('partner_id','=', parent.partner_id)]" />-->
-                <!--</xpath>-->
+                    <attribute name="string">发站-到站</attribute>
+                </xpath>
 
 
                 <xpath expr="//field[@name='order_line']/form/group/group/div/field[@name='product_uom_qty']" position="attributes">
