--- a/aop_sale/views/sale_order_views.xml
+++ b/aop_sale/views/sale_order_views.xml
@@ -90,7 +90,7 @@
                     <field name="partner_take_care_id"
                            string="Take Car Address"
                            options="{'no_create': True, 'no_open': True}}"
-                           domain="[('id','=', partner_id), ('type','=', 'take')]"
+                           domain="[('parent_id','=', partner_id), ('type','=', 'take')]"
                            />
 
                 </xpath>
@@ -100,7 +100,7 @@
 
                 <xpath expr="//field[@name='partner_shipping_id']" position="attributes">
                     <attribute name="string">Delivery Car Address</attribute>
-                    <attribute name="domain">[('id','=', partner_id), ('type','=', 'delivery')]</attribute>
+                    <attribute name="domain">[('parent_id','=', partner_id), ('type','=', 'delivery')]</attribute>
                     <attribute name="options">{'no_create': True, 'no_open': True}</attribute>
 
                 </xpath>
