--- a/aop_sale/views/sale_order_views.xml
+++ b/aop_sale/views/sale_order_views.xml
@@ -197,7 +197,7 @@
                 <xpath expr="//field[@name='order_line']/tree/field[@name='product_id']" position="after">
                     <field name="service_product_id" domain="[('type','=','service')]" attrs="{'required': 0}" />
                     <field name="carrier_id"  domain="[('partner_id','=', parent.partner_id)]" groups="aop_sale.group_aop_sale_customers" />
-                    <field name="carrier_price" groups="aop_sale.group_aop_sale_customers" />
+                    <field name="carrier_price" attrs="{'readonly':1}" groups="aop_sale.group_aop_sale_customers" />
                     <field name="vin"/>
                 </xpath>
 
