--- a/aop_sale/views/sale_order_views.xml
+++ b/aop_sale/views/sale_order_views.xml
@@ -145,7 +145,7 @@
                                             'default_lst_price': price_unit,
                                             'default_description_sale': name
                                         }"
-                                        string="货物2"
+                                        string="货物"
                                     />
 
                 </xpath>
