--- a/aop_sale/views/delivery_carrier.xml
+++ b/aop_sale/views/delivery_carrier.xml
@@ -10,7 +10,21 @@
             <field name="arch" type="xml">
                 <xpath expr="//field[@name='integration_level']" position="after">
                     <field name="partner_id" string="合作伙伴"/>
+                    <field name="serial_number" />
+                    <field name="version_id" />
+                    <field name="serial_no" />
+                    <field name="is_formal" />
+                    <field name="project_id" />
 
+                </xpath>
+
+                <xpath expr="//field[@name='product_id']" position="after">
+                    <field name="date_start" />
+                    <field name="date_end" />
+                    <field name="effective_date" />
+                    <field name="expiry_date" />
+                    <field name="source" />
+                    <field name="type" widget="radio" />
                 </xpath>
 
                 <xpath expr="//page[@name='destination']" position="after">
