--- a/aop_sale/views/delivery_carrier.xml
+++ b/aop_sale/views/delivery_carrier.xml
@@ -14,6 +14,7 @@
                     <field name="version_id" />
                     <field name="serial_no" />
                     <field name="is_formal" />
+
                     <field name="project_id" />
 
                 </xpath>
@@ -27,10 +28,11 @@
                     <field name="type" widget="radio" />
                 </xpath>
 
-                <xpath expr="//page[@name='destination']" position="after">
-                    <page name="route_id" string="路由">
+                <xpath expr="//page[1]" position="before">
+                    <page name="route_id" string="明细">
                         <field name="aop_route_id" string="路由">
                             <tree>
+                                <field name="product_id"/>
                                 <field name="name" string="路由说明"/>
                                 <field name="partner_id" string="合作伙伴"/>
                             </tree>
