--- a/aop_sale/views/stock_picking.xml
+++ b/aop_sale/views/stock_picking.xml
@@ -1,6 +1,17 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <odoo>
 
+    <record id="vpicktree_inherit_aop_sale" model="ir.ui.view">
+        <field name="name">stock.picking.tree</field>
+        <field name="model">stock.picking</field>
+        <field name="inherit_id" ref="stock.vpicktree"/>
+        <field name="arch" type="xml">
+            <xpath expr="//field[@name='picking_type_id']" position="after">
+                <field name="product_id"/>
+            </xpath>
+        </field>
+    </record>
+
     <record id="view_picking_form_inherit_aop_purchase" model="ir.ui.view">
         <field name="name">stock.picking.form.inherit.aop.purchase</field>
         <field name="model">stock.picking</field>
@@ -25,10 +36,10 @@
 
 
             <xpath expr="//field[@name='origin']" position="after">
-                <!--
+
                 <field name="src_partner_id" string="源地址"/>
                 <field name="des_partner_id" string="目的地址"/>
-                -->
+
                 <field name="picking_purchase_id"
                        string="供方任务订单"
                        attrs="{'invisible': [('picking_purchase_id', '=', False)]}"/>
