--- a/aop_sale/views/delivery_carrier.xml
+++ b/aop_sale/views/delivery_carrier.xml
@@ -3,31 +3,120 @@
 
     <data>
 
+        <record id="action_aop_contract_view" model="ir.actions.act_window">
+            <field name="name">合同</field>
+            <field name="res_model">aop.contract</field>
+
+        </record>
+
+        <record id="view_aop_contract_tree" model="ir.ui.view">
+            <field name="name">aop.contract.tree</field>
+            <field name="model">aop.contract</field>
+            <field name="arch" type="xml">
+                <tree string="合同">
+
+                    <field name="name"/>
+                    <field name="serial_number" />
+                    <field name="version_id" />
+                    <field name="date_start" />
+                    <field name="date_end" />
+
+                </tree>
+            </field>
+        </record>
+
+        <record id="view_aop_contract_form" model="ir.ui.view">
+            <field name="name">aop.contract.form</field>
+            <field name="model">aop.contract</field>
+            <field name="arch" type="xml">
+                <form string="Carrier">
+                    <sheet>
+
+                        <div class="oe_title" name="title">
+                            <label for="name" string="Name" class="oe_edit_only"/>
+                            <h1>
+                                <field name="name" />
+                            </h1>
+                        </div>
+                        <group>
+                            <group>
+                                <field name="partner_id" string="合作伙伴"/>
+                                <field name="serial_number"/>
+                                <field name="version_id"/>
+                                <field name="serial_no"/>
+                                <field name="is_formal"/>
+                                <field name="project_id"/>
+
+                            </group>
+                            <group>
+
+                                <field name="date_start"/>
+                                <field name="date_end"/>
+                                <field name="effective_date"/>
+                                <field name="expiry_date"/>
+                                <field name="source"/>
+                                <field name="type" widget="radio"/>
+
+                            </group>
+                        </group>
+
+                        <notebook>
+                        <page string="合同条款">
+                            <field name="delivery_carrier_ids">
+                                 <tree >
+                                     <field name="name" string="条款名称"/>
+                                     <field name="product_id" string="货物"/>
+                                     <field name="route_id" />
+
+                                </tree>
+
+                            </field>
+
+                        </page>
+
+                    </notebook>
+
+                    </sheet>
+                </form>
+            </field>
+        </record>
+
         <record model="ir.ui.view" id="view_delivery_carrier_form_inherit">
             <field name="name">delivery.carrier_from</field>
             <field name="model">delivery.carrier</field>
             <field name="inherit_id" ref="delivery.view_delivery_carrier_form"/>
             <field name="arch" type="xml">
-                <xpath expr="//field[@name='integration_level']" position="after">
-                    <field name="partner_id" string="合作伙伴"/>
-                    <field name="serial_number" />
-                    <field name="version_id" />
-                    <field name="serial_no" />
-                    <field name="is_formal" />
 
-                    <field name="project_id" />
 
+                <xpath expr="//field[@name='name']" position="attributes">
+                    <attribute name="placeholder"></attribute>
                 </xpath>
+
+                <xpath expr="//field[@name='product_id']" position="attributes">
+                    <attribute name="string">货物</attribute>
+                </xpath>
+
+                <xpath expr="//label[@for='margin']" position="attributes">
+                    <attribute name="invisible">1</attribute>
+                </xpath>
+
+                <xpath expr="//field[@name='margin']/.." position="attributes">
+                    <attribute name="invisible">1</attribute>
+                </xpath>
+
+                <xpath expr="//field[@name='free_over']/.." position="attributes">
+                    <attribute name="invisible">1</attribute>
+                </xpath>
+
 
                 <xpath expr="//field[@name='product_id']" position="after">
-                    <field name="date_start" />
-                    <field name="date_end" />
-                    <field name="effective_date" />
-                    <field name="expiry_date" />
-                    <field name="source" />
-                    <field name="type" widget="radio" />
+                    <field name="route_id" />
+                    <field name="service_product_id" />
+
                 </xpath>
 
+
+                <!--
                 <xpath expr="//page[1]" position="before">
                     <page name="route_id" string="合同条款">
                         <field name="aop_route_id" string="路由">
@@ -39,6 +128,7 @@
                         </field>
                     </page>
                 </xpath>
+                -->
 
             </field>
         </record>
