--- a/aop_sale/views/sale_order_views.xml
+++ b/aop_sale/views/sale_order_views.xml
@@ -197,7 +197,7 @@
                 <xpath expr="//field[@name='order_line']/tree/field[@name='product_id']" position="after">
                     <field name="service_product_id" string="服务产品" domain="[('type','=','service')]" attrs="{'required': 0}" />
 
-                    <field name="carrier_id"  domain="[('partner_id','=', parent.partner_id)]" groups="aop_sale.group_aop_sale_customers" />
+                    <field name="contract_id"  domain="[('partner_id','=', parent.partner_id)]" groups="aop_sale.group_aop_sale_customers" />
                     <field name="carrier_price" attrs="{'readonly':1}" groups="aop_sale.group_aop_sale_customers" />
                     <!--
                     <field name="aging" string="时效(天)" attrs="{'readonly':1}" />
@@ -233,10 +233,10 @@
 
                     <!--<field name="service_product_id" domain="[('type','=','service')]" attrs="{'required': 0}" />-->
 
-                    <label for="carrier_id"/>
+                    <label for="contract_id"/>
                     <div name='carrier_selection'>
                         <div>
-                            <field name="carrier_id" domain="[('partner_id','=', parent.partner_id)]" class="oe_inline"
+                            <field name="contract_id" domain="[('partner_id','=', parent.partner_id)]" class="oe_inline"
                                    options="{'no_create': True, 'no_open': True}"
                                    attrs="{'readonly':[('state','not in',('draft','sent'))]}" groups="aop_sale.group_aop_sale_customers"/>
 
