--- a/aop_sale/views/sale_order_views.xml
+++ b/aop_sale/views/sale_order_views.xml
@@ -65,7 +65,7 @@
 
                 <xpath expr="//button[@name='action_view_delivery']" position="after">
                     <button name="open_vin_picking"
-							string="VIN码调拨单"
+							string="任务匹配"
 							type="object"
 							class="oe_stat_button"
 							icon="fa-list"/>
@@ -197,8 +197,9 @@
                 <xpath expr="//field[@name='order_line']/tree/field[@name='product_id']" position="after">
                     <field name="service_product_id" string="服务产品" domain="[('type','=','service')]" attrs="{'required': 0}" />
 
-                    <field name="contract_id"  domain="[('partner_id','=', parent.partner_id)]" groups="aop_sale.group_aop_sale_customers" />
-                    <field name="carrier_price" attrs="{'readonly':0}" groups="aop_sale.group_aop_sale_customers" />
+                    <field name="contract_id" invisible="1" domain="[('partner_id','=', parent.partner_id)]" groups="aop_sale.group_aop_sale_customers" />
+                    <field name="carrier_price" invisible="1" attrs="{'readonly':0}" groups="aop_sale.group_aop_sale_customers" />
+
                     <!--
                     <field name="aging" string="时效(天)" attrs="{'readonly':1}" />
                     -->
@@ -206,8 +207,11 @@
                 </xpath>
 
                 <xpath expr="//field[@name='order_line']/tree/field[@name='route_id']" position="attributes">
-                    <!--<field name="route_id"  domain="[('partner_id','=', parent.partner_id)]" />-->
+
                     <attribute name="string">发站-到站</attribute>
+                    <!--
+                    <attribute name="domain">[('partner_id','=', parent.partner_id)]</attribute>
+                    -->
                 </xpath>
 
 
@@ -233,8 +237,8 @@
 
                     <!--<field name="service_product_id" domain="[('type','=','service')]" attrs="{'required': 0}" />-->
 
-                    <label for="contract_id"/>
-                    <div name='carrier_selection'>
+                    <label for="contract_id" invisible="1"/>
+                    <div name='carrier_selection' invisible="1">
                         <div>
                             <field name="contract_id" domain="[('partner_id','=', parent.partner_id)]" class="oe_inline"
                                    options="{'no_create': True, 'no_open': True}"
