--- a/aop_sale/views/stock_picking.xml
+++ b/aop_sale/views/stock_picking.xml
@@ -29,7 +29,7 @@
             </xpath>
 
             <xpath expr="//field[@name='picking_type_id']" position="after">
-                <field name="move_id_without_package" />
+                <field name="move_id_without_package" string="" />
 
             </xpath>
 
