--- a/aop_sale/views/stock_picking_batch_view.xml
+++ b/aop_sale/views/stock_picking_batch_view.xml
@@ -36,6 +36,16 @@
                 <xpath expr="//separator" position="attributes">
                     <attribute name="string">调度</attribute>
                 </xpath>
+
+                 <xpath expr="//field[@name='picking_ids']/tree/field[@name='name']" position="after">
+
+                    <field name="product_id"/>
+                     <field name="location_id"/>
+                     <field name="location_dest_id"/>
+                     <field name="product_uom_qty"/>
+                     <field name="quantity_done"/>
+
+                </xpath>
         </field>
     </record>
 
