--- a/aop_sale/views/stock_picking_views.xml
+++ b/aop_sale/views/stock_picking_views.xml
@@ -8,7 +8,7 @@
         <field name="arch" type="xml">
 
             <field name="sequence_id" position="after">
-                <field name="product_id" domain="[('type','=','service')]" />
+                <field name="product_id" domain="[('type','=','service')]" string="服务产品" />
             </field>
 
             <field name="code" position="after">
